[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/windows/Windows_Inner_Frame_Inverted.png" type="Texture" id=1]
[ext_resource path="res://assets/95.tres" type="Theme" id=2]
[ext_resource path="res://src/screen/windows/inbox/Inbox.gd" type="Script" id=3]

[node name="Inbox" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 510, 230 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Panels" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Headers" type="ItemList" parent="Panels"]
margin_right = 200.0
margin_bottom = 225.0
rect_min_size = Vector2( 200, 225 )
theme = ExtResource( 2 )

[node name="Content" type="VBoxContainer" parent="Panels"]
margin_left = 204.0
margin_right = 504.0
margin_bottom = 225.0

[node name="From" type="NinePatchRect" parent="Panels/Content"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="FromLabels" type="VBoxContainer" parent="Panels/Content/From"]
margin_left = 6.0
margin_top = 6.0
margin_right = 133.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Panels/Content/From/FromLabels"]
margin_right = 127.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FROM"

[node name="From" type="Label" parent="Panels/Content/From/FromLabels"]
margin_top = 17.0
margin_right = 127.0
margin_bottom = 30.0
text = "The Office of the Chancellor"

[node name="Subject" type="NinePatchRect" parent="Panels/Content"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 300, 40 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="SubjectLabels" type="VBoxContainer" parent="Panels/Content/Subject"]
margin_left = 6.0
margin_top = 6.0
margin_right = 141.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Panels/Content/Subject/SubjectLabels"]
margin_right = 135.0
margin_bottom = 13.0
text = "SUBJECT"

[node name="Subject" type="Label" parent="Panels/Content/Subject/SubjectLabels"]
margin_top = 17.0
margin_right = 135.0
margin_bottom = 30.0
text = "Updates to Messaging System"

[node name="Body" type="NinePatchRect" parent="Panels/Content"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 223.0
rect_min_size = Vector2( 300, 135 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Message" type="RichTextLabel" parent="Panels/Content/Body"]
margin_left = 4.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 129.0
rect_min_size = Vector2( 294, 130 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "We have terminated one of your officers. The officer demonstrated knowledge of unauthorized information. Worse still, the officer's behavior resembled those of hostile temporal agents, capable of shifting between timelines and within timelines in order to use advance knowledge to gain advantages over enemies.

Due to the sensitve nature of our work, we are unable to tolerate such threats and are therefore terminating our contract with your firm, effective immediately.

--
B. Russel
Chief Operations Officer"

[connection signal="item_selected" from="Panels/Headers" to="." method="_on_Headers_item_selected"]
